// ha il ruolo di Product
public interface Nemico {
	public String getNome();
	public void applicaDanno(int danno);
	public boolean isSconfitto();
}
